...
        verticalAlignment = Alignment.CenterVertically,
        modifier = modifier.fillMaxWidth()
    ) {
        OutlinedTextField(
            value = query,
            onValueChange = onQueryChanged,
            label = { Text("Найти рецепт...") },
            modifier = Modifier.weight(1.0f),
            singleLine = true,
            keyboardOptions = KeyboardOptions(
                keyboardType = KeyboardType.Text,
                imeAction = ImeAction.Search
            ),
            keyboardActions = KeyboardActions(
                onSearch = { onSearchClicked() }
            )
        )
        Spacer(modifier = Modifier.width(8.dp))
        Button(onClick = onSearchClicked) {
            Text("Поиск")
        }
    }
}

@Composable
fun CategoryList(
...
